# bgfx-with-imgui-example-cmake

./: .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  LICENSE.txt  README.md
cmake/: imgui.cmake  libdshowcapture.cmake
engine/: App.cpp  AssetManager.cpp  AssetManager.h  CMakeLists.txt  Context.cpp  Context.h  Math.h  Mesh.h  MeshComponent.h  RenderSystem.cpp  RenderSystem.h  SystemBase.h  pch.h
rhi/: CMakeLists.txt  Mat.h  RHIContext.h  Vec.h
src/: DShowCore.cpp  DShowCore.h  HRI.cpp  HRI.h  cs_yuv422ToRgb.sc  fs_texture_01.sc  main.cpp  vs_texture_01.sc
